--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -302,7 +302,12 @@
   }
 </style>
 
-<app-publishers></app-publishers>
+<nav>
+  <a routerLink="/">Home</a> <!-- Link do komponentu HomeComponent -->
+  <a routerLink="/about">About</a> <!-- Link do komponentu AboutComponent -->
+</nav>
+
+<router-outlet></router-outlet>
 <!--
 <div class="toolbar" role="banner">
   <img
