--- a/client/src/app/components/sections/publishers/publishers.component.html
+++ b/client/src/app/components/sections/publishers/publishers.component.html
@@ -1,3 +1,5 @@
-<div *ngIf="isGranted">
-  <p>publishers works!</p>
+<div class="container">
+  <div *ngIf="isGranted">
+    <p>publishers works!</p>
+  </div>
 </div>
