--- a/client/src/app/components/sections/common/navbar/navbar.component.scss
+++ b/client/src/app/components/sections/common/navbar/navbar.component.scss
@@ -1,50 +1,57 @@
+@import "../../../../../../src/styles";
+
+$navbar-hover: rgb(237, 241, 11);
+$navbar-font-color: white;
+
+.dropdown-toggle::after {
+  display: none;
+}
+
+
 .navbar-style {
-    background-color: rgb(58, 60, 214);
-    border-bottom: 5px solid rgb(237, 241, 11);
-    margin-bottom: 10px;
-  }
+  background-color: $main-color;
+  border-bottom: 5px solid rgb(237, 241, 11);
+  margin-bottom: 10px;
+}
 
-  .navbar-style .navbar-brand {
-    color: white;
-    font-weight: bold;
-  }
+.navbar-style .navbar-brand {
+  color: $navbar-font-color;
+  font-weight: bold;
+}
 
-  .navbar-style .navbar-nav .nav-link {
-    color: white;
-  }
+.navbar-style .navbar-nav .nav-link {
+  color: $navbar-font-color;
+  letter-spacing:2px;
+  margin-right: 20px;
+  padding-right: 10px;
+  transition: color 0.3s, transform 0.3s; // Dodaje animację dla koloru i skali
+}
 
-  .navbar-style .navbar-nav .nav-link:hover {
-    color: rgb(237, 241, 11);
-  }
+.navbar-style .navbar-nav .nav-link:hover {
+  color: $navbar-hover;
+  transform: scale(1.1);
+}
 
-  .navbar-style .btn-outline-success {
-    color: white;
-    border-color: white;
-  }
+.navbar-style .btn-outline-success {
+  color: $navbar-font-color;
+}
 
-  .navbar-style .btn-outline-success:hover {
-    background-color: white;
-    color: rgb(58, 60, 214);
-    transform: scale(0.1);
-  }
+.navbar-style .dropdown-menu {
+  background-color: $main-color;
+}
 
-  .navbar-style .dropdown-menu {
-    background-color: rgb(58, 60, 214);
-  }
+.navbar-style .dropdown-menu .dropdown-item {
+  color: $navbar-font-color;
+}
 
-  .navbar-style .dropdown-menu .dropdown-item {
-    color: white;
-  }
+.navbar-style .dropdown-menu .dropdown-item:hover {
+  background-color: $main-color;
+  color: $navbar-hover;
+}
 
-  .navbar-style .dropdown-menu .dropdown-item:hover {
-    background-color: rgb(58, 60, 214);
-    color: rgb(237, 241, 11);
-  }
-
-  /* Dodaj większy rozmiar czcionki dla linków */
-  .games-link,
-  .publishers-link,
-  .developers-link,
-  .login-link {
-    font-size: 20px;
-  }
+.games-link,
+.publishers-link,
+.developers-link,
+.login-link {
+  font-size: 20px;
+}
