--- a/client/src/app/components/sections/common/navbar/navbar.component.scss
+++ b/client/src/app/components/sections/common/navbar/navbar.component.scss
@@ -1,12 +1,9 @@
 @import "../../../../../../src/styles";
 
-$navbar-hover: rgb(237, 241, 11);
-$navbar-font-color: white;
 
 .dropdown-toggle::after {
   display: none;
 }
-
 
 .navbar-style {
   background-color: $main-color;
@@ -24,7 +21,7 @@ $navbar-font-color: white;
   letter-spacing:2px;
   margin-right: 20px;
   padding-right: 10px;
-  transition: color 0.3s, transform 0.3s; // Dodaje animację dla koloru i skali
+  transition: color 0.3s, transform 0.3s;
 }
 
 .navbar-style .navbar-nav .nav-link:hover {
