--- a/client/src/app/components/sections/common/navbar/navbar.component.html
+++ b/client/src/app/components/sections/common/navbar/navbar.component.html
@@ -26,20 +26,8 @@
         </li>
       </ul>
 
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 login-link">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Login
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end"> <!-- Użyj klasy dropdown-menu-end -->
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      </ul>
-
+      <user-navbar></user-navbar>
+      
     </div>
   </div>
 </nav>
