--- a/client/src/app/components/sections/common/navbar/navbar.component.scss
+++ b/client/src/app/components/sections/common/navbar/navbar.component.scss
@@ -7,7 +7,7 @@
 
 .navbar-style {
   background-color: $main-color;
-  border-bottom: 5px solid rgb(237, 241, 11);
+  border-bottom: $border-bottom;
   margin-bottom: 10px;
 }
 
@@ -21,12 +21,13 @@
   letter-spacing:2px;
   margin-right: 20px;
   padding-right: 10px;
-  transition: color 0.3s, transform 0.3s;
+  transition: transform 0.3s ease, color 1s ease; /* Dodaj animację */
 }
 
 .navbar-style .navbar-nav .nav-link:hover {
   color: $navbar-hover;
   transform: scale(1.1);
+  transition: transform 0.3s ease, color 1s ease; /* Dodaj animację */
 }
 
 .navbar-style .btn-outline-success {
@@ -41,14 +42,13 @@
   color: $navbar-font-color;
 }
 
-.navbar-style .dropdown-menu .dropdown-item:hover {
-  background-color: $main-color;
-  color: $navbar-hover;
+.dropdown-menu {
+  background-color: blue;
+  margin-top: 20px; /* Możesz dostosować tę wartość według potrzeb */
 }
 
 .games-link,
 .publishers-link,
-.developers-link,
-.login-link {
+.developers-link{
   font-size: 20px;
 }
