--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -1,4 +1,4 @@
 $main-color : rgb(110, 136, 144);
-$border-bottom : 5px solid rgb(237, 241, 11);
-$navbar-hover: rgb(237, 241, 11);
-$navbar-font-color: white;
+$border-bottom : 5px solid rgb(62, 123, 245);
+$navbar-hover: rgb(255, 255, 255);
+$navbar-font-color: rgba(255, 255, 255, 0.714);
