--- a/client/src/app/components/sections/common/navbar/navbar.component.html
+++ b/client/src/app/components/sections/common/navbar/navbar.component.html
@@ -16,16 +16,16 @@
 
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link games-link" routerLink="/Games/list">Games</a>
+          <a class="nav-link games-link" routerLink="/Games/list"><p>{{ translationService.translate('games') }}</p></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link publishers-link" routerLink="/Publishers/list">Publishers</a>
+          <a class="nav-link publishers-link" routerLink="/Publishers/list">{{ translationService.translate('publishers') }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link developers-link" routerLink="/Developers/list">Developers</a>
+          <a class="nav-link developers-link" routerLink="/Developers/list">{{ translationService.translate('developers') }}</a>
         </li>
       </ul>
-
+  
       <user-navbar></user-navbar>
       
     </div>
