--- a/client/src/app/components/sections/common/navbar/user-navbar/user-navbar.component.html
+++ b/client/src/app/components/sections/common/navbar/user-navbar/user-navbar.component.html
@@ -1,15 +1,58 @@
 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
     <li class="nav-item navbar-icon">
-      <div class="circle-icon" [ngClass]="{'circle-icon-not-active': !userNotyfication}" [ngClass]="{'circle-icon-active': userNotyfication}">
+      <div class="circle-icon" data-bs-toggle="modal" data-bs-target="#notificationModal" [ngClass]="{'circle-icon-not-active': !userNotification}" [ngClass]="{'circle-icon-active': userNotification}">
         <i class="fa-sharp fa-solid fa-bell "></i>
-        <span *ngIf="userNotyfication" class="message-count" >{{ userNotyfication }}</span>
+        <span *ngIf="userNotification" class="message-count" >{{ userNotification }}</span>
       </div>
-      <div class="circle-icon" [ngClass]="{'circle-icon-not-active': !userMessage}" [ngClass]="{'circle-icon-active': userMessage}">
+      <div class="circle-icon" data-bs-toggle="modal" data-bs-target="#messagegesModal" [ngClass]="{'circle-icon-not-active': !userMessage}" [ngClass]="{'circle-icon-active': userMessage}">
         <i class="fa-solid fa-message"></i>
         <span *ngIf="userMessage" class="message-count">{{ userMessage }}</span>
       </div>
-      <div class="circle-icon circle-icon-not-active">
+      <div class="circle-icon circle-icon-not-active" data-bs-toggle="modal" data-bs-target="#userProfilModal">
         <i class="fas fa-user"></i>
       </div>
     </li>
   </ul>
+
+  <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">{{ translationService.translate('notifications') }}</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="messagegesModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">{{ translationService.translate('messages') }}</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="userProfilModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">{{ translationService.translate('profil') }}</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
