--- a/client/src/app/components/sections/common/navbar/user-navbar/notification-model/notification-model.component.html
+++ b/client/src/app/components/sections/common/navbar/user-navbar/notification-model/notification-model.component.html
@@ -1,8 +1,8 @@
-<div class="modal fade" id="userProfilModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">{{ translationService.translate('profil') }}</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">{{ translationService.translate('notifications') }}</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
