--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,14 @@
-<navbar></navbar>
-<div class="container text-center">
-  <router-outlet></router-outlet>
+<div *ngIf="!auth">
+  <navbar></navbar>
+  <div class="container text-center">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
+<div *ngIf="auth">
+  <auth-navbar></auth-navbar>
+  <div class="container text-center">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
