--- a/client/src/app/components/sections/common/navbar/user-navbar/user-profil-modal/user-profil-modal.component.html
+++ b/client/src/app/components/sections/common/navbar/user-navbar/user-profil-modal/user-profil-modal.component.html
@@ -13,7 +13,7 @@
             <div class="tab-content" id="v-pills-tabContent">
               <div class="tab-pane fade" id="logout" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">
                 {{ translationService.translate('sesionExpirationIn') }} : <b>{{ authService.getExpirationTimeRemaining() }}</b>
-                <button class="btn btn-primary" (click)="extendSession()">Extend Session</button>
+                <button class="btn btn-primary" (click)="logOut()">{{ translationService.translate('logOut') }}</button>
               </div>
             </div>
           </div>
