auth login layout

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,9 @@
 <div *ngIf="auth">
   <auth-navbar></auth-navbar>
   <div class="container text-center">
-    <router-outlet></router-outlet>
+    <div class="section">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
 
