--- a/client/src/app/components/sections/common/navbar/auth-navbar/auth-navbar.component.html
+++ b/client/src/app/components/sections/common/navbar/auth-navbar/auth-navbar.component.html
@@ -1,1 +1,24 @@
-<p>auth-navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-style">
+    <div class="container-fluid">
+  
+      <a class="navbar-brand" routerLink="/">Gamers Hub</a>
+  
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">  
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;"></ul>
+  
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <li class="nav-item">
+            <a class="nav-link games-link" routerLink="/login"><p>{{ translationService.translate('login') }}</p></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link publishers-link" routerLink="/register">{{ translationService.translate('register') }}</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
