--- a/client/src/app/components/sections/auth/login/login.component.html
+++ b/client/src/app/components/sections/auth/login/login.component.html
@@ -1,19 +1,31 @@
+<div *ngIf="loginFailed" class="alert alert-danger mt-3">
+  {{ translationService.translate(errorMessage) }}
+</div>
+
 <h2 class="text-center mb-4">{{ translationService.translate('login') }}</h2>
-<form class="form">
+<form class="form" (ngSubmit)="onSubmit()" #loginForm="ngForm">
   <div class="mb-3">
-    <input type="email" class="form-control" id="login" placeholder="{{ translationService.translate('loginIn') }}">
+    <input 
+        type="email" 
+        class="form-control" 
+        id="login" 
+        placeholder="{{ translationService.translate('loginIn') }}" 
+        name="email" 
+        [(ngModel)]="email" 
+        required>
   </div>
   <div class="mb-3">
-    <input type="password" class="form-control" id="password" placeholder="{{ translationService.translate('password') }}">
+    <input 
+        type="password" 
+        class="form-control" 
+        id="password" 
+        placeholder="{{ translationService.translate('password') }}" 
+        name="password" 
+        [(ngModel)]="password" 
+        required>
   </div>
 
-  <a routerLink="/login">
-    <button type="submit" class="btn btn-lg">{{ translationService.translate('login') }}</button>
-  </a>
-  <a routerLink="/login">
-    <button type="submit" class="btn btn-lg">{{ translationService.translate('forgetpassword') }}</button>
-  </a>
-  <a routerLink="/register">
-    <button type="submit" class="btn btn-lg">{{ translationService.translate('register') }}</button>
-  </a>
+  <button type="submit" class="btn btn-primary btn-lg w-100">{{ translationService.translate('login') }}</button>
+  <a routerLink="/forgot-password" class="btn btn-link mt-3">{{ translationService.translate('forgotPassword') }}</a>
+  <a routerLink="/register" class="btn btn-link mt-3">{{ translationService.translate('register') }}</a>
 </form>
