--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,12 +1,23 @@
 $section-bg-color : rgb(154, 175, 182);
 $border-color : rgb(62, 123, 245);
 
-.section{
-    color: white;
-    background-color: $section-bg-color;
-    border: 3px solid $border-color;
-    box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
-}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  
+  .section {
+    background-color: #f8f9fa; 
+    padding: 20px;
+    border-radius: 5px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  }
+  
+  .img-fluid {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
