--- a/client/src/app/components/sections/common/navbar/auth-navbar/auth-navbar.component.html
+++ b/client/src/app/components/sections/common/navbar/auth-navbar/auth-navbar.component.html
@@ -1,13 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-style">
     <div class="container-fluid">
   
-      <a class="navbar-brand" routerLink="/">Gamers Hub</a>
-  
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
   
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">  
+      <div class="collapse navbar-collapse" id="navbarToggler">  
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;"></ul>
   
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
