--- a/client/src/app/components/sections/common/navbar/navbar.component.html
+++ b/client/src/app/components/sections/common/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-style">
   <div class="container-fluid">
 
-    <a class="navbar-brand" routerLink="/">Gamers Hub</a>
+    <a class="navbar-brand" routerLink="/">
+      <img src="../../../../../../assets/logs/gamers-hub-high-resolution-logo-transparent.png" width="120" height="50" clsss="logo">
+    </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
