--- a/client/src/app/components/sections/auth/login/login.component.html
+++ b/client/src/app/components/sections/auth/login/login.component.html
@@ -25,7 +25,9 @@
         required>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-lg w-100">{{ translationService.translate('login') }}</button>
-  <a routerLink="/forgot-password" class="btn btn-link mt-3">{{ translationService.translate('forgotPassword') }}</a>
-  <a routerLink="/register" class="btn btn-link mt-3">{{ translationService.translate('register') }}</a>
+  <div class="actions">
+    <button type="submit" class="btn btn-primary btn-lg w-100">{{ translationService.translate('login') }}</button>
+    <a routerLink="/forgot-password" class="btn btn-link mt-3">{{ translationService.translate('forgotPassword') }}</a>
+    <a routerLink="/register" class="btn btn-link mt-3">{{ translationService.translate('register') }}</a>
+  </div>
 </form>
