--- a/client/src/app/components/sections/auth/register/register.component.html
+++ b/client/src/app/components/sections/auth/register/register.component.html
@@ -1,1 +1,44 @@
-<p>register works!</p>
+<div *ngIf="registerFailed" class="alert alert-danger mt-3">
+    {{ translationService.translate(errorMessage) }}
+  </div>
+  
+  <h2 class="text-center mb-4">{{ translationService.translate('register') }}</h2>
+  <form class="form" (ngSubmit)="onSubmit()" #registerForm="ngForm">
+    <div class="mb-3">
+      <input 
+          type="email" 
+          class="form-control" 
+          id="login" 
+          placeholder="{{ translationService.translate('loginIn') }}" 
+          name="email" 
+          [(ngModel)]="email" 
+          required>
+    </div>
+    <div class="mb-3">
+      <input 
+          type="password" 
+          class="form-control" 
+          id="password" 
+          placeholder="{{ translationService.translate('password') }}" 
+          name="password" 
+          [(ngModel)]="password" 
+          required>
+    </div>
+
+    <div class="mb-3">
+        <input 
+            type="password" 
+            class="form-control" 
+            id="passwordRepeat" 
+            placeholder="{{ translationService.translate('passwordRepeat') }}" 
+            name="passwordRepeat" 
+            [(ngModel)]="passwordRepeat" 
+            required>
+      </div>
+  
+    <div class="actions">
+      <button type="submit" class="btn btn-primary btn-lg w-100">{{ translationService.translate('login') }}</button>
+      <a routerLink="/forgot-password" class="btn btn-link mt-3">{{ translationService.translate('forgotPassword') }}</a>
+      <a routerLink="/register" class="btn btn-link mt-3">{{ translationService.translate('register') }}</a>
+    </div>
+  </form>
