dynamic emial walidation fornt end

--- a/client/src/app/components/sections/auth/register/register.component.html
+++ b/client/src/app/components/sections/auth/register/register.component.html
@@ -13,6 +13,7 @@
           id="email" 
           aria-describedby="emailGroupPrepend emailFeedback" 
           [(ngModel)]="email" 
+          (keyup) ="validLogin()"
           placeholder="{{ translationService.translate('loginIn') }}"  
           name="email"     
           required>
