--- a/client/src/app/components/sections/auth/register/register.component.html
+++ b/client/src/app/components/sections/auth/register/register.component.html
@@ -30,6 +30,7 @@
             aria-describedby="passwordShow passwordFeedback" 
             placeholder="{{ translationService.translate('password') }}" 
             name="password" 
+            (keyup) ="passwordStrength()"
             [(ngModel)]="password" 
             required>
           <div id="passwordFeedback" class="invalid-feedback"></div>
