--- a/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
+++ b/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="actions">
-      <add-publishers *ngIf="canAddPublishers"></add-publishers>
+      <add-publishers *ngIf="canAddPublisher"></add-publishers>
     </div>
 
 <div class="list" *ngIf="canListPublishers">
@@ -13,10 +13,10 @@
           Electronic Arts
         </div>
         <div class="col-3 list-elment-icons">
-          <i class="fa-solid fa-circle-info action-icon"></i>
-          <i class="fa-sharp fa-solid fa-sliders action-icon"></i>
-          <i class="fa-solid fa-pen-to-square action-icon"></i>
-          <i class="fa-solid fa-trash action-icon"></i>
+          <i *ngIf="canShowPublisher" class="fa-solid fa-circle-info action-icon"></i>
+          <i *ngIf="canEditPublisher" class="fa-sharp fa-solid fa-sliders action-icon"></i>
+          <i *ngIf="canEditPublisher" class="fa-solid fa-pen-to-square action-icon"></i>
+          <i *ngIf="canDeletePublisher" class="fa-solid fa-trash action-icon"></i>
         </div>
       </div>
   </div>
