add publisher base voter

--- a/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
+++ b/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
@@ -1,2 +1,7 @@
-<button type="submit" class="btn btn-primary"><i class="fa-solid fa-plus"></i> {{ translationService.translate('addPublishers') }}</button>
+<button 
+    *ngIf="canAddPublisher" 
+    type="submit" 
+    class="btn btn-primary">
+        <i class="fa-solid fa-plus">    </i> {{ translationService.translate('addPublishers') }}
+</button>
 
