--- a/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
+++ b/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
@@ -1,23 +1,23 @@
 <div class="container">
-    <div class="actions">
-      <add-publishers *ngIf="canAddPublisher"></add-publishers>
+  <div class="actions">
+      <add-publishers></add-publishers>
+  </div>
+  <div class="list" *ngIf="canListPublishers">
+    <div class="listElemnts">
+        <div class="row list-elment">
+          <div class="col-1">
+            <img src="../../../../../../assets/media/logo/ea.png" class="logo">
+          </div>
+          <div class="col-8 list-elment-name">
+            Electronic Arts
+          </div>
+          <div class="col-3 list-elment-icons">
+            <i *ngIf="canShowPublisher" class="fa-solid fa-circle-info action-icon"></i>
+            <i *ngIf="canEditPublisher" class="fa-sharp fa-solid fa-sliders action-icon"></i>
+            <i *ngIf="canEditPublisher" class="fa-solid fa-pen-to-square action-icon"></i>
+            <i *ngIf="canDeletePublisher" class="fa-solid fa-trash action-icon"></i>
+          </div>
+        </div>
     </div>
-
-<div class="list" *ngIf="canListPublishers">
-  <div class="listElemnts">
-      <div class="row list-elment">
-        <div class="col-1">
-          <img src="../../../../../../assets/media/logo/ea.png" class="logo">
-        </div>
-        <div class="col-8 list-elment-name">
-          Electronic Arts
-        </div>
-        <div class="col-3 list-elment-icons">
-          <i *ngIf="canShowPublisher" class="fa-solid fa-circle-info action-icon"></i>
-          <i *ngIf="canEditPublisher" class="fa-sharp fa-solid fa-sliders action-icon"></i>
-          <i *ngIf="canEditPublisher" class="fa-solid fa-pen-to-square action-icon"></i>
-          <i *ngIf="canDeletePublisher" class="fa-solid fa-trash action-icon"></i>
-        </div>
-      </div>
   </div>
 </div>
