--- a/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.scss
+++ b/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.scss
@@ -11,11 +11,22 @@
         border-radius: 20px;
         background-color: $section-bg-color;
         border : 2px solid $bottom-color;
-
+        transition: transform 0.3s ease, color 1s ease;
+        
         .list-elment-name,.list-elment-icons{
             color: white;
             font-size: 20px;
             margin-top: 8px;
+        }
+
+        a{
+            color: white;
+            text-decoration: none;
+        }
+
+        a:hover{
+            color: wheat;
+            transition: transform 0.3s ease, color 1s ease;
         }
 
         .list-elment-icons{
