--- a/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
+++ b/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
@@ -13,7 +13,7 @@
             <a [routerLink]="['/publisher/show/', publisher.id]">{{ publisher.generalInformation.name }}</a>
           </div>
           <div class="col-3 list-elment-icons">
-            <i class="fa-solid fa-circle-info action-icon"></i>
+            <a [routerLink]="['/publisher/show/', publisher.id]"><i class="fa-solid fa-circle-info action-icon"></i></a>
             <i *ngIf="publisher.canEditPublisher" class="fa-solid fa-pen-to-square action-icon"></i>
             <i *ngIf="publisher.canDeletePublisher" class="fa-solid fa-trash action-icon"></i>
           </div>
