--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -11,5 +11,6 @@ $border-color : rgb(62, 123, 245);
 @import "scss/actions";
 @import "scss/navbar";
 @import "scss/forms";
+@import "scss/mian";
 
 
