--- a/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
+++ b/client/src/app/components/sections/publishers/publishers-main-list/publishers-main-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="actions">
-      <add-publishers></add-publishers>
+      <add-publishers-button></add-publishers-button>
   </div>
   
   <div class="list" *ngIf="canListPublishers">
