--- a/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
+++ b/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
@@ -11,7 +11,7 @@
                             <label for="name" class="col-sm-2 col-form-label">Name:</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" formId = "generalInformationname" class="form-control" id="name" required>
+                            <input type="text" form="generalInformation" requestId = "generalInformation.name" formId = "generalInformationname" class="form-control" formControlName="name" id="name" required>
                             <div class="invalid-feedback" formFeedback = "generalInformationname"></div>
                         </div>
                     </div>
@@ -24,7 +24,7 @@
                             <label for="origin" class="col-sm-2 col-form-label">Origin:</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" class="form-control" formId = "generalInformationorigin" formControlName="origin" id="origin">
+                            <input type="text" class="form-control" requestId = "generalInformation.origin" form="generalInformation" formId = "generalInformationorigin" formControlName="origin" id="origin">
                             <div formFeedback = "generalInformationorigin" class="invalid-feedback"></div>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                             <label for="origin" class="col-sm-2 col-form-label">Founded:</label>
                         </div>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" formId = "generalInformationfounded" formControlName="founded" id="founded">
+                            <input type="text" class="form-control" requestId = "generalInformation.founded" form="generalInformation" formId = "generalInformationfounded" formControlName="founded" id="founded">
                             <div formFeedback = "generalInformationfounded" class="invalid-feedback"></div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                             <label for="website" class="col-sm-2 col-form-label">Website:</label>
                         </div>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" formId = "generalInformationwebsite" id="website" formControlName="website">
+                            <input type="text" class="form-control" requestId = "generalInformation.website" form="generalInformation" formId = "generalInformationwebsite" id="website" formControlName="website">
                             <div formFeedback = "generalInformationwebsite" class="invalid-feedback"></div>
                         </div>
                     </div>
@@ -61,8 +61,8 @@
                             <label for="headquarter" class="col-sm-2 col-form-label">Headquarter:</label>
                         </div>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" formId = "generalInformationheadquarter" id="headquarter" id="headquarter" formControlName="headquarter">
-                            <div formFeedback = "generalInformationwebsite" class="invalid-feedback"></div>
+                            <input type="text" class="form-control" requestId = "generalInformation.headquarter" form="generalInformation" formId = "generalInformationheadquarter" id="headquarter" id="headquarter" formControlName="headquarter">
+                            <div formFeedback = "generalInformationheadquarter" class="invalid-feedback"></div>
                         </div>
                     </div>
                 </div>
