--- a/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
+++ b/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
@@ -1,8 +1,16 @@
 <h2 class="text-center mb-4">Add Publisher</h2>
+
 <div class="form-section d-flex">
+
+    <div  *ngIf="section === 'general_information_normal'">
+        <div class="scraper-icon">
+            <i type="button" data-bs-toggle="modal" data-bs-target="#generalInformation" class="fa-solid fa-globe"></i>
+        </div>
+    </div>
+
     <form [formGroup]="publisherForm" class="container mx-auto" (ngSubmit)="onSubmit()">
         <div class="col-8">
-            <div formGroupName="generalInformation" *ngIf="section == 'general_information_normal'">
+            <div formGroupName="generalInformation" *ngIf="section === 'general_information_normal'">
                 <h2>General Information</h2>
                 <div class="row mb-3">
                     
@@ -61,7 +69,7 @@
                             <label for="headquarter" class="col-sm-2 col-form-label">Headquarter:</label>
                         </div>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" requestId = "generalInformation.headquarter" form="generalInformation" formId = "generalInformationheadquarter" id="headquarter" id="headquarter" formControlName="headquarter">
+                            <input type="text" class="form-control" requestId = "generalInformation.headquarter" form="generalInformation" formId = "generalInformationheadquarter" id="headquarter"  formControlName="headquarter">
                             <div formFeedback = "generalInformationheadquarter" class="invalid-feedback"></div>
                         </div>
                     </div>
@@ -94,8 +102,43 @@
                 <button type="submit" class="btn btn-primary btn-lg w-100">Next</button>
             </div>
         </div>
-        
-
     </form>      
 </div>
 
+<div class="modal fade" id="generalInformation" tabindex="-1" aria-labelledby="generalInformationScraper" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="generalInformationScraper">General Information Scraper</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form [formGroup]="generalInformationScraperForm" class="container mx-auto" (ngSubmit)="onGeneralInformationScraperSubmit()">
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-4">
+                        <label for="name" class="col-sm-2 col-form-label">Name:</label>
+                    </div>
+                    <div class="col-8">
+                        <input 
+                            type="text" 
+                            form="generalInformation" 
+                            requestId = "generalInformation.url" 
+                            formId = "url" 
+                            class="form-control" 
+                            id="url" 
+                            name="url" 
+                            id="url"  
+                            formControlName="url"
+                            required
+                        >
+                        <div class="invalid-feedback" formFeedback = "url"></div>
+                    </div>
+               </div>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Scrap</button>
+            </div>
+        </form> 
+      </div>
+    </div>
+  </div>
