--- a/client/src/scss/_forms.scss
+++ b/client/src/scss/_forms.scss
@@ -26,6 +26,7 @@
   border-bottom: 4px solid $red-500;
 }
 .form-section{
+  position: relative;
   margin: auto;
   width: 75%;
   color: rgb(255, 255, 255);
@@ -42,4 +43,14 @@
     align-items: center; /* Center vertically (optional) */
     word-wrap: wrap;
   }
+}
+
+.scraper-icon{
+  opacity: 0.7;
+  position: absolute;
+  right: 10px;
+}
+
+.scraper-icon:hover{
+  opacity: 1;
 }
