add active route

--- a/client/src/app/components/sections/common/navbar/auth-navbar/auth-navbar.component.html
+++ b/client/src/app/components/sections/common/navbar/auth-navbar/auth-navbar.component.html
@@ -10,10 +10,10 @@
   
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
           <li class="nav-item">
-            <a class="nav-link games-link" routerLink="/login"><p>{{ translationService.translate('login') }}</p></a>
+            <a class="nav-link login-link" routerLink="/login" routerLinkActive="active-link"><p>{{ translationService.translate('login') }}</p></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link publishers-link" routerLink="/register">{{ translationService.translate('register') }}</a>
+            <a class="nav-link register-link" routerLink="/register" routerLinkActive="active-link">{{ translationService.translate('register') }}</a>
           </li>
         </ul>
 
