--- a/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
+++ b/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
@@ -126,7 +126,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-4">
-                        <label for="name" class="col-sm-2 col-form-label">Name:</label>
+                        <label for="name" class="col-sm-2 col-form-label">Url:</label>
                     </div>
                     <div class="col-8">
                         <input 
